fix firefox overflow, fix #90

--- a/app/assets/stylesheets/custom/_layout.css.scss
+++ b/app/assets/stylesheets/custom/_layout.css.scss
@@ -52,6 +52,11 @@ img {
 .group-info {
   margin-top: 3em;
 }
+.list-group {
+  .media {
+    width: 50%;
+  }
+}
 
 .student-list {
   img {
